# AI-Reader

./: .gitignore  README.md  docker-compose.yml  k8s-deployment.yaml
.gitea/workflows/: docker-build.yml
back/: .gitignore  Dockerfile  README.md  articles.db  articles.json  database.py  main.py  model.py  pyproject.toml  requirements.txt
back/templates/: article.html  home.html  index.html
docs/: overview.md
front/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
front/src/: App.jsx  index.css
front/src/components/: ArticleView.css  ArticleView.jsx  Home.css  Home.jsx  Loader.css  Loader.jsx
